force-app/main/default/objects/ParcelforceSetting__c/ParcelforceSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Parcelforce Setting</label>
</CustomObject>