force-app/main/default/objects/ParcelforceSetting__c/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <label>Contract Number</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>