force-app/main/default/objects/ParcelforceSetting__c/fields/LastCollection__c.field-meta.xml
<CustomField>
    <fullName>LastCollection__c</fullName>
    <label>Last Collection</label>
    <length>5</length>
    <type>Text</type>
</CustomField>