force-app/main/default/objects/ParcelforceSetting__c/fields/MaximumOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>MaximumOrderAmount__c</fullName>
    <label>Maximum Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>