force-app/main/default/objects/ParcelforceSetting__c/fields/MaximumOrdersPerDayLondon__c.field-meta.xml
<CustomField>
    <fullName>MaximumOrdersPerDayLondon__c</fullName>
    <label>Maximum Orders Per Day London</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>