force-app/main/default/objects/ParcelforceSetting__c/fields/MaximumOrdersPerDayNonLondon__c.field-meta.xml
<CustomField>
    <fullName>MaximumOrdersPerDayNonLondon__c</fullName>
    <label>Maximum Orders Per Day Non London</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>