force-app/main/default/objects/ParcelforceSetting__c/fields/MinimumOrdersPerDayLondon__c.field-meta.xml
<CustomField>
    <fullName>MinimumOrdersPerDayLondon__c</fullName>
    <label>Minimum Orders Per Day London</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>