force-app/main/default/objects/ParcelforceSetting__c/fields/ServiceCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceCode__c</fullName>
    <label>Service Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>