force-app/main/default/objects/ParcelforceSetting__c/fields/ShipmentType__c.field-meta.xml
<CustomField>
    <fullName>ShipmentType__c</fullName>
    <label>Shipment Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>