force-app/main/default/objects/ParcelforceSetting__c/fields/StatusCancelled__c.field-meta.xml
<CustomField>
    <fullName>StatusCancelled__c</fullName>
    <label>Cancelled Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>