force-app/main/default/objects/ParcelforceSetting__c/fields/StatusDelivered__c.field-meta.xml
<CustomField>
    <fullName>StatusDelivered__c</fullName>
    <label>Delivered Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>