force-app/main/default/objects/ParcelforceSetting__c/fields/StatusRedelivery__c.field-meta.xml
<CustomField>
    <fullName>StatusRedelivery__c</fullName>
    <label>Redelivery Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>